samples/_failures_safe/1761477196_4b5c23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b3ec371.c:168:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 | void print_token
      | ^~~~
